# coretrace-log

./: CMakeLists.txt  LICENSE  README.md
.github/: clang-format.yml  license-compliance.yml
.github/workflows/: build.yml
cmake/: coretrace-loggerConfig.cmake.in
example/: main.cpp
include/coretrace/: logger.hpp
scripts/: check-license-compliance.sh
src/: logger.cpp  logger_platform.hpp  logger_posix.cpp  logger_windows.cpp
tests/: CMakeLists.txt  test_api_precedence.cpp  test_concurrency_smoke.cpp  test_debug_level.cpp  test_module_filter.cpp
