add_executable(coretrace_logger_test_api_precedence test_api_precedence.cpp)
target_link_libraries(coretrace_logger_test_api_precedence PRIVATE coretrace_logger)
add_test(NAME coretrace_logger.test_api_precedence COMMAND coretrace_logger_test_api_precedence)

add_executable(coretrace_logger_test_module_filter test_module_filter.cpp)
target_link_libraries(coretrace_logger_test_module_filter PRIVATE coretrace_logger)
add_test(NAME coretrace_logger.test_module_filter COMMAND coretrace_logger_test_module_filter)

add_executable(coretrace_logger_test_concurrency_smoke test_concurrency_smoke.cpp)
target_link_libraries(coretrace_logger_test_concurrency_smoke PRIVATE coretrace_logger)
add_test(NAME coretrace_logger.test_concurrency_smoke COMMAND coretrace_logger_test_concurrency_smoke)
set_tests_properties(coretrace_logger.test_concurrency_smoke PROPERTIES TIMEOUT 20)
